--- a/coupon.html
+++ b/coupon.html
@@ -134,7 +134,7 @@
           >
             <div class="offcanvas__logo logo">
               <a href="index.html">
-                <img src="assets/img/logo/logo.svg" alt="logo" />
+                <img src="assets/img/Fasion/logo2.png" alt="logo" />
               </a>
             </div>
           </div>
@@ -173,13 +173,13 @@
               <span
                 class="offcanvas__currency-selected-currency tp-currency-toggle"
                 id="tp-offcanvas-currency-toggle"
-                >Currency : USD</span
+                >Currency : INR</span
               >
               <ul class="offcanvas__currency-list tp-currency-list">
                 <li>USD</li>
-                <li>ERU</li>
+                <!-- <li>ERU</li>
                 <li>BDT</li>
-                <li>INR</li>
+                <li>INR</li> -->
               </ul>
             </div>
             <div class="offcanvas__select language">
@@ -187,7 +187,11 @@
                 class="offcanvas__lang d-flex align-items-center justify-content-md-end"
               >
                 <div class="offcanvas__lang-img mr-15">
-                  <img src="assets/img/icon/language-flag.png" alt="" />
+                  <img
+                    src="assets/img/Fasion/flag.jpeg"
+                    alt=""
+                    style="height: 20px; width: auto"
+                  />
                 </div>
                 <div class="offcanvas__lang-wrapper">
                   <span
@@ -196,10 +200,10 @@
                     >English</span
                   >
                   <ul class="offcanvas__lang-list tp-lang-list">
-                    <li>Spanish</li>
-                    <li>Portugese</li>
-                    <li>American</li>
-                    <li>Canada</li>
+                    <li>Hindi</li>
+                    <!-- <li>Portugese</li>
+                    <li>American</li> -->
+                    <!-- <li>Canada</li> -->
                   </ul>
                 </div>
               </div>
@@ -368,13 +372,9 @@
       </div>
     </div>
     <!-- cart mini area end -->
-
     <!-- header area start -->
     <header>
-      <div
-        class="tp-header-area tp-header-style-darkRed tp-header-height"
-        style="margin-bottom: -26px; margin-top: -35px"
-      >
+      <div class="tp-header-area tp-header-style-primary tp-header-height">
         <!-- header top start  -->
         <div
           class="tp-header-top-2 p-relative z-index-11 tp-header-top-border d-none d-md-block"
@@ -399,7 +399,7 @@
                           />
                         </svg>
                       </span>
-                      70k Followers
+                      7500k Followers
                     </a>
                   </div>
                   <div class="tp-header-info-item">
@@ -437,12 +437,12 @@
                           />
                         </svg>
                       </span>
-                      +91 7042727979
+                      +(402) 763 282 46
                     </a>
                   </div>
                 </div>
               </div> -->
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <div
                   class="tp-header-top-right tp-header-top-black d-flex align-items-center justify-content-end"
                 >
@@ -511,7 +511,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -524,11 +524,7 @@
                 <div class="col-xl-2 col-lg-5 col-md-5 col-sm-4 col-6">
                   <div class="logo">
                     <a href="index.html">
-                      <img
-                        src="assets/img/Fasion/logo2.png"
-                        alt="logo"
-                        style="margin-left: -38px"
-                      />
+                      <img src="assets/img/Fasion/logo2.png" alt="logo" />
                     </a>
                   </div>
                 </div>
@@ -538,8 +534,8 @@
                       <ul>
                         <li class="has has-mega-menu">
                           <a href="index.html">Home</a>
-                          <div class="home-menu tp-submenu tp-mega-menu">
-                            <!-- <div
+                          <!-- <div class="home-menu tp-submenu tp-mega-menu">
+                            <div
                               class="row row-cols-1 row-cols-lg-4 row-cols-xl-5"
                             >
                               <div class="col">
@@ -561,7 +557,7 @@
                               </div>
                               <div class="col">
                                 <div class="home-menu-item">
-                                  <a href="index.html">
+                                  <a href="index-2.html">
                                     <div class="home-menu-thumb p-relative fix">
                                       <img
                                         src="assets/img/menu/menu-home-2.jpg"
@@ -619,8 +615,8 @@
                                   </a>
                                 </div>
                               </div>
-                            </div> -->
-                          </div>
+                            </div>
+                          </div> -->
                         </li>
                         <li class="has has-mega-menu">
                           <a href="shop.html">Shop</a>
@@ -775,129 +771,11 @@
                         </li>
                         <li class="has has-mega-menu">
                           <a href="product-details.html">Products</a>
-                          <ul class="tp-submenu tp-mega-menu mega-menu-style-2">
-                            <li class="has-dropdown">
-                              <a href="shop.html" class="mega-menu-title"
-                                >Shop Page</a
-                              >
-                              <ul class="tp-submenu">
-                                <li>
-                                  <a href="shop-category.html"
-                                    >Only Categories</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="shop-filter-offcanvas.html"
-                                    >Shop Grid</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="shop.html">Shop Grid with Sideber</a>
-                                </li>
-                                <li><a href="shop-list.html">Shop List</a></li>
-                                <li>
-                                  <a href="shop-category.html">Categories</a>
-                                </li>
-                                <li>
-                                  <a href="product-details.html"
-                                    >Product Details</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-progress.html"
-                                    >Product Details Progress</a
-                                  >
-                                </li>
-                              </ul>
-                            </li>
-                            <!-- third col -->
-                            <li class="has-dropdown">
-                              <a
-                                href="product-details.html"
-                                class="mega-menu-title"
-                                >Products</a
-                              >
-                              <ul class="tp-submenu">
-                                <li>
-                                  <a href="product-details.html"
-                                    >Product Simple</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-video.html"
-                                    >With Video</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-countdown.html"
-                                    >With Countdown Timer</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-presentation.html"
-                                    >Product Presentation</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-swatches.html"
-                                    >Variations Swatches</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-list.html"
-                                    >List View</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-gallery.html"
-                                    >Details Gallery</a
-                                  >
-                                </li>
-                                <li>
-                                  <a href="product-details-slider.html"
-                                    >With Slider</a
-                                  >
-                                </li>
-                              </ul>
-                            </li>
-                            <!-- third col -->
-                            <li class="has-dropdown">
-                              <a href="shop.html" class="mega-menu-title"
-                                >eCommerce</a
-                              >
-                              <ul class="tp-submenu">
-                                <li><a href="cart.html">Shopping Cart</a></li>
-                                <li>
-                                  <a href="order.html">Track Your Order</a>
-                                </li>
-                                <li><a href="compare.html">Compare</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
-                                <li><a href="checkout.html">Checkout</a></li>
-                                <li><a href="profile.html">My account</a></li>
-                              </ul>
-                            </li>
-
-                            <!-- second col -->
-                            <li class="has-dropdown">
-                              <a href="shop.html" class="mega-menu-title"
-                                >More Pages</a
-                              >
-                              <ul class="tp-submenu">
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="login.html">Login</a></li>
-                                <li><a href="register.html">Register</a></li>
-                                <li>
-                                  <a href="forgot.html">Forgot Password</a>
-                                </li>
-                                <li><a href="404.html">404 Error</a></li>
-                              </ul>
-                            </li>
-                          </ul>
                         </li>
                         <li><a href="coupon.html">Coupons</a></li>
-                        <li class="has">
+                        <!-- <li class="has-dropdown">
                           <a href="blog.html">Blog</a>
-                          <!-- <ul class="tp-submenu">
+                          <ul class="tp-submenu">
                             <li><a href="blog.html">Blog Standard</a></li>
                             <li><a href="blog-grid.html">Blog Grid</a></li>
                             <li><a href="blog-list.html">Blog List</a></li>
@@ -909,8 +787,8 @@
                             <li>
                               <a href="blog-details.html">Blog Details</a>
                             </li>
-                          </ul> -->
-                        </li>
+                          </ul>
+                        </li> -->
                         <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </nav>
@@ -1374,7 +1252,7 @@
                   <div
                     class="tp-header-bottom-right d-flex align-items-center justify-content-end pl-30"
                   >
-                    <!-- <div class="tp-header-search-2 d-none d-sm-block">
+                    <div class="tp-header-search-2 d-none d-sm-block">
                       <form action="#">
                         <input
                           type="text"
@@ -1405,7 +1283,7 @@
                           </svg>
                         </button>
                       </form>
-                    </div> -->
+                    </div>
                     <div
                       class="tp-header-action d-flex align-items-center ml-30"
                     >
@@ -1564,7 +1442,6 @@
       </div>
     </header>
     <!-- header area end -->
-
     <main>
       <!-- breadcrumb area start -->
       <section class="breadcrumb__area include-bg pt-95 pb-50">
