--- a/index.html
+++ b/index.html
@@ -603,9 +603,9 @@
               >
               <ul class="offcanvas__currency-list tp-currency-list">
                 <li>USD</li>
-                <li>ERU</li>
+                <!-- <li>ERU</li>
                 <li>BDT</li>
-                <li>INR</li>
+                <li>INR</li> -->
               </ul>
             </div>
             <div class="offcanvas__select language">
@@ -613,7 +613,11 @@
                 class="offcanvas__lang d-flex align-items-center justify-content-md-end"
               >
                 <div class="offcanvas__lang-img mr-15">
-                  <img src="assets/img/icon/language-flag.png" alt="" />
+                  <img
+                    src="assets/img/Fasion/flag.jpeg"
+                    alt=""
+                    style="height: 20px; width: auto"
+                  />
                 </div>
                 <div class="offcanvas__lang-wrapper">
                   <span
@@ -621,12 +625,12 @@
                     id="tp-offcanvas-lang-toggle"
                     >English</span
                   >
-                  <!-- <ul class="offcanvas__lang-list tp-lang-list">
-                    <li>Spanish</li>
-                    <li>Portugese</li>
-                    <li>American</li>
-                    <li>Canada</li>
-                  </ul> -->
+                  <ul class="offcanvas__lang-list tp-lang-list">
+                    <li>Hindi</li>
+                    <!-- <li>Portugese</li>
+                    <li>American</li> -->
+                    <!-- <li>Canada</li> -->
+                  </ul>
                 </div>
               </div>
             </div>
